--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,5 @@
     <!-- 글쓰기 -->
     <string name="writing_title">글쓰기</string>
     <string name="writing_hint">24시간 이내 스트리밍 감상한 곡에 한하여 작성하신 댓글에 감상 여부가 표기 됩니다.\n감상 후 24시간이 지난 경우, 또는 내부 서비스 환경에 따라 감상 여부의 표기가 안될 수 있습니다.</string>
-    <string name="writing_max_count">&#160;/ 1000</string>
+    <string name="writing_max_count">%d / 1000</string>
 </resources>
