--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="num_of_people">%d명</string>
     <string name="format_time">%d시간 전</string>
     <string name="format_comment">댓글 %d</string>
+    <string name="format_reply">답글 %d</string>
 
     <!-- Navigation -->
     <string name="tab_home">홈</string>
