--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="format_num_of_song">%d곡</string>
     <string name="format_comment">댓글 %d</string>
     <string name="format_reply">답글 %d</string>
+    <string name="format_hashtag">#%s</string>
 
     <!-- Navigation -->
     <string name="tab_home">홈</string>
